--- a/Data Visualisation/Hello, Seaborn.ipynb
+++ b/Data Visualisation/Hello, Seaborn.ipynb
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(20,10))# adjust this figure size,you can change the tuple values to plat around with this feauture\n",
+    "plt.figure(figsize=(20,10))# adjust this figure size,you can change the tuple values to play around with this feauture\n",
     "sns.lineplot(data=oo)"
    ]
   },
